Fixed login and registration
