# src/app/entities/registration/services/registration.service.ts
@@ -1,10 +1,10 @@
 import { Injectable } from '@angular/core';
 import {UsersService} from "../../../core/api/v1/users/services/users.service";
-import {RegisterUser$Params} from "../../../core/api/v1/users/fn/users/register-user";
-import {RegisterUser} from "../../../core/api/v1/users/models/register-user";
-import {Observable, Subscription} from "rxjs";
-import {CompleteRegistration$Params} from "../../../core/api/v1/users/fn/users/complete-registration";
+import {Observable} from "rxjs";
 import {OtpCodeCheck} from "../../../core/api/v1/users/models/otp-code-check";
+import {NewUser} from "../../../core/api/v1/users/models/new-user";
+import { v4 as uuidv4 } from 'uuid';
+import {Base} from "../../../core/api/v1/users/models/base";
 
 @Injectable({
   providedIn: 'root'
@@ -15,12 +15,12 @@ export class RegistrationService {
       private userService: UsersService
   ) { }
 
-  registerNewUser(body: RegisterUser): Observable<void> {
-    return this.userService.registerUser({body: body})
+  registerNewUser(body: NewUser): Observable<Base> {
+    return this.userService.registerUser({body: body, "x-request-id": uuidv4()})
   }
 
-  completeRegistration(body: OtpCodeCheck): Observable<void> {
-    return this.userService.completeRegistration({body: body});
+  completeRegistration(body: OtpCodeCheck): Observable<Base> {
+    return this.userService.completeRegistration({body: body, "x-request-id": uuidv4()});
   }
 
 
